# gsplus

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  COPYRIGHT.txt  GSport.html  README.md  README.txt  TODO.md  appveyor.yml  config.template  make_dist_mac.sh  make_dmg_mac.sh  mini-asm.md
.github/workflows/: release.yml
.svn/: wc.db
assets/: Info.plist  control  dump_icon.py  gsp-dmg-icons.icns  gsp-icons.icns  gsp_dmg_bg_600x500.psd  gsp_icon.psd  gsp_icon_dmg.psd  make_ico.pl  uncrustify.cfg  updatewebsite.php
doc/: Developer-QuickStart-Linux.txt  Developer-QuickStart-MacOSX.txt  Developer-QuickStart-Rpi.txt  Developer-QuickStart-Win32_SDL2.txt  GitlabCI-Runner-Linux.txt  GitlabCI-Runner-MacOSX.txt  GitlabCI-Runner-Win32-SDL.txt  GitlabCI-Runner-Win32.txt  README.md  README.txt  gsplusmanual.txt  kegs-universal.md
doc/web/: buildpost.bat  removeMaven.re
doc/web/src/site/apt/: appletalk.apt  developing.apt  history.apt  operating.apt  printer.apt
gsplus/lib/: kegsicon.icns  make_mac_icon
gsplus/src/: AppDelegate.swift  Info.plist  MainView.swift  Makefile  adb.c  applesingle.c  clock.c  comp_swift  compile_time.c  config.c  config.h  cp_gsplus_libs  debugger.c  defc.h  defcomm.h  defs_instr.h  dependency  disas.h  doc.c  dyna_filt.c  dyna_type.c  dyna_validate.c  dynapro.c  engine.h  engine_c.c  instable.h  iwm.c  iwm.h  joystick_driver.c  kegs.icns  kegsfont.h  kegswin.sln  macsnd_driver.c  mockingboard.c  moremem.c  op_routs.h  paddles.c  protos.h  protos_base.h  protos_macdriver.h  (+29 more)
include/npcap/: Packet32.h
scripts/: package-osx.sh
src/: CMakeLists.txt  GSport.bat  Makefile  adb.c  adb.h  adb_keycodes.h  clock.c  compile_time.c  config.c  config.h  config.txt  debug.c  debug.h  debug_miniasm.re2c  debug_shell.re2c  debug_sweet16.re2c  debug_template.re2c  defc.h  defcomm.h  defs.h  defs_instr.h  dis.c  disas.h  disasm.c  disasm.h  engine_c.c  engine_s.s  fbdriver.c  fix_mac_menu.m  fst.h  glog.c  glog.h  gsos.h  gsport.sln  gsport.vcxproj  gsport.vcxproj.filters  gsport32.aps  gsport32.rc  gsportfont.h  headless_driver.c  (+96 more)
src/arch/mac/: 525.icns  GSportDMG.icns  GSportFolder.icns  gsporticon.icns  info.nib  objects.xib
src/arch/os2/: Makefile  gsportos2.h  gsportos2.rc  make_inst.cmd  make_size.cmd  os2driver.c  os2snd_driver.c  scc_socket_os2.c
src/arch/os2/src/: dirport.c  dirport.h
src/arch/win32/: bpf.h  pcap.h
src/assets/: GSBug.Templates  GSOS.text  NList.Data  Tools.text  config.txt  control.in  gsp_icon.icns
src/atbridge/: CMakeLists.txt  aarp.c  aarp.h  atalk.h  atbridge.c  atbridge.h  atbridge.vcxproj  atbridge.vcxproj.filters  elap.c  elap.h  elap_defs.h  llap.c  llap.h  pcap_delay.c  pcap_delay.h  port.c  port.h
src/rawnet/: CMakeLists.txt  Networking.txt  cs8900.c  cs8900.h  rawnet.c  rawnet.h  rawnetarch.c  rawnetarch.h  rawnetarch_darwin.c  rawnetarch_tap.c  rawnetarch_unix.c  rawnetarch_vmnet.c  rawnetarch_vmnet_helper.c  rawnetarch_win32.c  rawnetsupp.c  rawnetsupp.h  vmnet_helper.c
src/tfe/: CMakeLists.txt  protos_tfe.h  tfe.c  tfe.vcxproj  tfe.vcxproj.filters  tfearch.c  tfesupp.c  tfesupp.h
upstream/: KEGS.version
upstream/kegs/: config.kegs  xkegs
upstream/kegs/doc/: CHANGES.txt  INTERNALS.iwm.txt  INTERNALS.overview.txt  INTERNALS.video.txt  INTERNALS.xdriver.txt  README.ROM.files.txt  README.a2.compatibility.txt  README.compile.txt  README.dynapro.txt  README.kegs.txt  README.linux.partitions.txt  README.mac.txt  README.serial.ports.txt  README.win32.txt
upstream/kegs/lib/: 2mg.icns  MainMenu.nib
upstream/kegs/src/: AppDelegate.swift  Info.plist  Kegs-Bridging-Header.h  MainView.swift  Makefile  adb.c  applesingle.c  clock.c  compile_time.c  config.c  config.h  debugger.c  defc.h  defcomm.h  defs_instr.h  disas.h  doc.c  dyna_filt.c  dyna_type.c  dyna_validate.c  dynapro.c  engine.h  engine_c.c  instable.h  iwm.c  iwm.h  joystick_driver.c  kegswin.vcxproj  ldvars  macsnd_driver.c  mockingboard.c  moremem.c  op_routs.h  paddles.c  protos.h  protos_base.h  protos_macdriver.h  protos_macsnd_driver.h  protos_pulseaudio_driver.h  protos_windriver.h  (+25 more)
